--- a/views/index/body.hbs
+++ b/views/index/body.hbs
@@ -8,7 +8,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Bookshop</strong></h1>
                             <p class="m-b-40">Mang cả thế giới sách về nhà bạn.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="/books">Shopping Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Bookshop</strong></h1>
                             <p class="m-b-40">Mang cả thế giới sách về nhà bạn.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            <p><a class="btn hvr-hover" href="/books">Shopping Now</a></p>
                         </div>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Welcome To <br> Bookshop</strong></h1>
                             <p class="m-b-40">Mang cả thế giới sách về nhà bạn.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                             <p><a class="btn hvr-hover" href="/books">Shopping Now</a></p>
                         </div>
                     </div>
                 </div>
