+ fix order (If cart is emty)

--- a/views/cart/checkout.hbs
+++ b/views/cart/checkout.hbs
@@ -107,7 +107,7 @@
                                 </tr>
                             </tbody>
                     </table>
-                     <a href="#" class="Thanh-toan btn hvr-hover" style="float: right;" onclick="return order()">Đặt hàng</a>
+                     <a href="#" class="Thanh-toan btn hvr-hover" style="float: right;" onclick="return order({{json cart.books_detail}})">Đặt hàng</a>
                 </div>
             </div>
         </div>
