--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -111,9 +111,9 @@
                             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Cửa Hàng</a>
                             <ul class="dropdown-menu">
                                 <li><a href="/books">Danh sách sản phẩm</a></li>
-                                <li><a href="/">Top sản phẩm</a></li>
-                                <li><a href="/">Thanh toán</a></li>
-                                <li><a href="/">Danh sách yêu thích</a></li>
+                                <li><a href="/carts">Giỏ hàng</a></li>
+                                <li><a href="/carts/checkout">Thanh toán</a></li>
+                               
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/contact">Liên hệ chúng tôi</a></li>
