+ update recover password

--- a/views/user/change-password.hbs
+++ b/views/user/change-password.hbs
@@ -21,7 +21,7 @@
                       width='100%'>
                         <tr>
                           <td align='left' style='padding: 56px 56px 28px 56px;' valign='top'>
-                            <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;font-weight:bold;'>Chào {{account}}!</div>
+                            <div style='font-family: "lato", "Helvetica Neue", Helvetica, Arial, sans-serif; line-height: 28px;font-size: 18px; color: #333;font-weight:bold;'>Chào {{user.account}}!</div>
                           </td>
                         </tr>
                         <tr>
