--- a/views/user/recover-password.hbs
+++ b/views/user/recover-password.hbs
@@ -14,7 +14,7 @@
                 <![endif]-->
                 <table cellpadding="0" cellspacing="0" border="0" align="center" style="width: 100%; max-width: 600px; background-color: #FFF; border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;"
                 id="contentTable">
-                <form action='/users/recover/{{id}}' method='post' onsubmit="return onsubmitRecoverPasswordValidation(this,{{json id}})">
+                <form action='/users/recover/{{id}}' method='post' onsubmit="return onsubmitRecoverPasswordValidation(this)">
                   <tr>
                     <td width="600" valign="top" align="center" style="border-collapse:collapse;">
                       <table align='center' border='0' cellpadding='0' cellspacing='0' style='border: 1px solid #E0E4E8;'
@@ -27,10 +27,7 @@
                         <tr>
                           <td align='left' style='padding: 0 56px 28px 56px;' valign='top'>
                               
-                            <div>
-                                <label for="old-pass"><h4>Mật khẩu cũ: </h4></label>
-                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 38px;" onchange="recoverPasswordValidation({{json id}},this.value)">
-                            </div>
+                           
                             <div>
                                 <label for="new-pass"><h4>Mật khẩu mới: </h4></label>
                                 <input type='password' id='new-pass' name='newPassword'style="margin-left: 30px;" onchange="checkPasswordChange(this.value)">
