--- a/views/books/list.hbs
+++ b/views/books/list.hbs
@@ -194,7 +194,7 @@
     </div>
 
 
-
+{{#ifeg count 1}}
 <div class="paginate-center" id="pagination">
     <ul>
         {{#paginate pagination type="first"}}
@@ -229,6 +229,7 @@
         {{/paginate}}
     </ul>
 </div>
+{{/ifeg}}
 
 
 <script type="text/x-handlebars-template" id="count-template">
