+ Update reOrder + Add re-enter new password

--- a/views/user/change-password.hbs
+++ b/views/user/change-password.hbs
@@ -29,11 +29,16 @@
                               
                             <div>
                                 <label for="old-pass"><h4>Mật khẩu cũ: </h4></label>
-                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 38px;" onchange="checkPasswordExist(this.value)">
+                                <input type='password' id='old-pass' name='oldPassword' style="margin-left: 106px;" onchange="checkPasswordExist(this.value)">
                             </div>
                             <div>
                                 <label for="new-pass"><h4>Mật khẩu mới: </h4></label>
-                                <input type='password' id='new-pass' name='newPassword'style="margin-left: 30px;" onchange="checkPasswordChange(this.value)">
+                                <input type='password' id='new-pass' name='newPassword'style="margin-left: 98px;" onchange="checkPasswordChange(this.value)">
+                            </div>
+
+                             <div>
+                                <label for="re-new-pass"><h4>Nhập lại mật khẩu khẩu mới: </h4></label>
+                                <input type='password' id='re-new-pass' name='re-newPassword'style="margin-left: 11px;" onchange="checkRePasswordChange(this.value)">
                             </div>
                             
                            {{#if notification}}
