--- a/views/user/recover-password.hbs
+++ b/views/user/recover-password.hbs
@@ -30,9 +30,14 @@
                            
                             <div>
                                 <label for="new-pass"><h4>Mật khẩu mới: </h4></label>
-                                <input type='password' id='new-pass' name='newPassword'style="margin-left: 30px;" onchange="checkPasswordChange(this.value)">
+                                <input type='password' id='new-pass' name='newPassword'style="margin-left: 98px;" onchange="checkPasswordChange(this.value)">
                             </div>
                             
+                            <div>
+                                <label for="re-new-pass"><h4>Nhập lại mật khẩu khẩu mới: </h4></label>
+                                <input type='password' id='re-new-pass' name='re-newPassword'style="margin-left: 11px;" onchange="checkRePasswordChange(this.value)">
+                            </div>
+
                             <div>
                                 <p class="error" id="change-error"></p>
                             </div>
