--- a/views/books/detail.hbs
+++ b/views/books/detail.hbs
@@ -27,7 +27,7 @@
                 <div class="single-product-details">
                     <h2>{{title}}</h2>
                     <h5>{{basePrice}}</h5>
-                    <h4>Short Description:</h4>
+                    <h4>Tóm tắt sản phẩm:</h4>
                     <p>{{detail}}</p>
 
                     <ul>
@@ -41,6 +41,8 @@
 
                     </ul>
 
+                    <h4 id="seen" style="margin-top:-30px;">Lượt xem: {{seen}}</h4>
+                    <h4 id="sold" style="margin-top:-2px;margin-bottom: 30px;">Đã bán: {{sold}}</h4>
                     <div class="price-box-bar">
                         <div class="cart-and-bay-btn">
                             <a class="btn hvr-hover" data-fancybox-close="" href="#"
